<resources>
    <string name="app_name">SijoitusSovellus</string>
    <string name="enter_a_stock_name">Enter a stock name</string>
    <string name="stockPriceInput">Enter the stock price</string>
    <string name="string_enter_the_amount_stocks">enter the amount stocks</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_sell">sell</string>
    <string name="sell_btn">Close position</string>
    <string name="tv_sumDescription">Total balance:</string>
    <string name="language">Language</string>
    <string name="finnish">Finnish</string>
    <string name="english">English</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>